1.20.1 Rewrite Backport